--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -759,10 +759,9 @@
     background: rgb(2, 0, 36);
     background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
     position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    min-height: 100vh;
+    width: 100%;
+    overflow: auto;
 
 }
 
@@ -793,6 +792,7 @@
 .wrapper .wrapper-message .MuiAvatar-root img {
     border-radius: 99px;
     padding: 10px;
+    max-width: 100px;
 }
 
 .wrapper .wrapper-message h6 {
