--- a/src/components/loader/style.css
+++ b/src/components/loader/style.css
@@ -4,4 +4,11 @@
     justify-content: center;
     align-items: center;
     padding: 10px;
+    color: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.247);
 }
